fixed hard-coded font size
fa icons were too big on mobile.

--- a/css/waves.css
+++ b/css/waves.css
@@ -251,7 +251,7 @@ h3{
 
 
 #contactIcons{
-    font-size: 300px;    
+    font-size: 20vw;    
     color: black
 }
 
